2006-02-03 Mikhail Khodjaiants
	The "ICDebuggerPage" interface and "AbstractCDebuggerPage" class are added.
	All extensions of the "CDebuggerPage" extension point must implement "ICDebuggerPage".
	* AbstractCLaunchDelegate.java

2006-01-30 Mikhail Khodjaiants
	Bug 124519: CDT launch shortcuts ignore Common Tabs "Launch in background" option.
	Applied patch from Andrew Ferguson (andrew.ferguson@arm.com).
	* CApplicationLaunchShortcut.java

2006-01-30 Mikhail Khodjaiants
	Bug 123997: launching subclasses of AbstractCLaunchDelegate causes progress information to be lost.
	Applied patch from Andrew Ferguson (andrew.ferguson@arm.com).
	* AbstractCLaunchDelegate.java

2006-01-29 Mikhail Khodjaiants
	Bug 118894: Allow stopping at other locations other than main().
	Applied patch from Ken Ryall (Nokia).
	* LaunchMessages.properties
	* CDebuggerTab.java

2006-01-25 Mikhail Khodjaiants
	Reversing changes made to fix bug 107571. The fix for bug 119683 covers this problem too.
	Inferior process shouldn't be shown as a part of the attach session.
	* LocalCDILaunchDelegate.java
	* LocalAttachLaunchDelegate.java

2006-01-23 Mikhail Khodjaiants
	Bug 119683: long messages during launch cause gdb to timeout, launch to fail.
	+ LocalCDILaunchDelegate.java
	* LaunchMessages.properties
	* plugin.xml

2006-01-06 Mikhail Khodjaiants
	Bug 120509: CDebuggerTab invokes wong initialization code (in addition to right code).
	* CDebuggerTab.java
	* CoreFileDebuggerTab.java

2006-01-06 Mikhail Khodjaiants
	Cleanup.
	* CArgumentsTab.java
	* CMainTab.java

2005-12-27 Mikhail Khodjaiants
	Cleanup.
	* LaunchUIPlugin.java
	* CApplicationLaunchShortcut.java

2005-12-27 Mikhail Khodjaiants
	Bug 109526: Support Eclipse-LazyStart and deprecate Eclipse-AutoStart.
	* MANIFEST.MF

2005-12-20 Mikhail Khodjaiants
	Bug 121474: NPE in CDebuggerTab.
	* CDebuggerTab.java

2005-09-08 Mikhail Khodjaiants
	The "Debugger" tab of the launch configuration dialog is too wide.
	* CDebuggerTab.java
	